knowledge_base/knowledge/v15/capl/structured/Obsolete/linSetHeaderError.md
# linSetHeaderError

> Category: `Obsolete` | Type: `notes`

| Deprecated Function No replacement. |  |  |  |  |
|---|---|---|---|---|
| Function Syntax | dword linSetHeaderError(byte syncByte, byte idwithParity, byte StopAfterError) |  |  |  |
| Function | With this function it is possible to set invalid parameters in a transmitted LIN header. These invalid parameters will be used until changed by another call to linSetHeaderError() for the same identifier (specified by the lower 6 bits of idWithParity). Setting the correct values with this function will of course disable all header errors for the specified id. Note This function will not be supported with the CANCard XLe. If the LIN hardware is not in Master mode calling this function will have no effect. The invalid header is not reported on the transmitting channel. To get the error notified an additional channel has to be configured and connected to the transmitting channel. | Note This function will not be supported with the CANCard XLe. If the LIN hardware is not in Master mode calling this function will have no effect. The invalid header is not reported on the transmitting channel. To get the error notified an additional channel has to be configured and connected to the transmitting channel. |  |  |
| Note This function will not be supported with the CANCard XLe. If the LIN hardware is not in Master mode calling this function will have no effect. The invalid header is not reported on the transmitting channel. To get the error notified an additional channel has to be configured and connected to the transmitting channel. |  |  |  |  |
| Parameters | syncByte Data value to be sent in the Synch byte field. Correct value is 0x55. Value range: 0..0xFF |  |  |  |
| idwithParity Data value to be sent in the Protected Identifier filed. The lower 6 bits specify the identifier to be used. The upper 2 bits specify the identifier parity to be used. The correct value can be calculated using linGetProtectedID() function. Value range: 0..0xFF |  |  |  |  |
| StopAfterError Specifies whether the transmission should be stopped after an error. If an incorrect synch byte is set by this function and StopAfterError is 1, the identifier will not be sent. The same is true for the message response (has to be activated independently) and an incorrect parity. Value range: 0..1 |  |  |  |  |
| Return Values | On success, a value unequal to zero, otherwise zero. |  |  |  |
| Availability | Since Version | Restricted To | Measurement Setup | Simulation/Test Setup |
| 5.1 | LIN Real bus mode | — | • |  |
| Example // Force an error in header of LIN frame with ID=0x33 by setting wrong protected ID on key 'h'{byte linID, protectedID, corParity, errParity, errPID;// calculate protected ID with wrong parity bitslinID = 0x33; // use frame ID=0x33protectedID = linGetProtectedID(linID); // get protected IDcorParity = (protectedID & 0xC0) >> 6; // extract parity (0xC=0=11000000)errParity = (corParity ^ 0x2) & 0x3; // calculate wrong parity using XORerrPID = linID \| (errParity << 6); // calculate PID with wrong paritylinSetHeaderError(0x55, errPID, 0);}...or...// Force an error in header of LIN frame with ID=0x33 by setting wrong Synch bytelinSetHeaderError(0x50, linGetProtectedID(0x33), 0); |  |  |  |  |

| Version 15© Vector Informatik GmbH |
|---|
